@@ -50,26 +50,9 @@ be_visitor_root_any_op::visit_root (be_root *node)
   if (this->visit_scope (node) == -1)
     {
       ACE_ERROR_RETURN ((LM_ERROR,
-                         "(%N:%l) be_visitor_root::visit_root - "
-                         "codegen for scope failed\n"), 
+                         ACE_TEXT ("be_visitor_root::visit_root - ")
+                         ACE_TEXT ("codegen for scope failed\n")), 
                         -1);
-    }
-
-  if (be_global->gen_anyop_files ())
-    { 
-      // Switch streams, ctx will be reassigned when this
-      // pass is done.
-      switch (this->ctx_->state ())
-        {
-          case TAO_CodeGen::TAO_ROOT_ANY_OP_CH:
-            this->ctx_->stream (tao_cg->client_header ());
-            break;         
-          case TAO_CodeGen::TAO_ROOT_ANY_OP_CS:
-            this->ctx_->stream (tao_cg->client_stubs ());
-            break;         
-          default:
-            break;
-        }
     }
 
   return 0;
